--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.1",
+		"cloudinary": "^1.32.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
@@ -22,6 +23,7 @@
 		"express-async-handler": "^1.2.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.7.2",
+		"multer": "^1.4.5-lts.1",
 		"nodemon": "^2.0.20"
 	}
 }
