--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"main": "server.js",
 	"type": "module",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node server",
-		"server": "nodemon server"
+		"server": "nodemon server",
+		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --runInBand --forceExit"
 	},
 	"keywords": [],
 	"author": "",
@@ -24,6 +24,11 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.7.2",
 		"multer": "^1.4.5-lts.1",
-		"nodemon": "^2.0.20"
+		"nodemon": "^2.0.20",
+		"supertest": "^6.3.1"
+	},
+	"devDependencies": {
+		"cross-env": "^7.0.3",
+		"jest": "^29.3.1"
 	}
 }
