--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"express-async-handler": "^1.2.0",
+		"flutterwave-node-v3": "^1.0.12",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.7.2",
 		"multer": "^1.4.5-lts.1",
 		"nodemon": "^2.0.20",
+		"stripe": "^11.5.0",
 		"supertest": "^6.3.1"
 	},
 	"devDependencies": {
